[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py-bootstrap-cli"
version = "0.0.2"
description = ""
authors = ["ph0xByte"]
readme = "README.md"
packages = [
    { include = "app", from = "src" }
]
[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.9.0"
toml = "^0.10.2"
colorama = "^0.4.6"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
dash = "^2.0.0"
networkx = "^2.6.2"
jupyter = "^1.0.0"
requests = "^2.26.0"
pendulum = "^2.1.2"
beautifulsoup4 = "^4.10.0"
pydantic = "^1.8.2"
pandas = "^1.3.3"
sqlalchemy = "^1.4.25"
tabulate = "^0.8.9"
astropy = "^4.3.1"
fastapi = "^0.68.1"
faker = "^8.12.1"
redis = "^3.5.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^23.12.1"
tox = "^4.11.4"
mypy = "^0.910"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
pbs = 'app.main:app'
